--- a/index.html
+++ b/index.html
@@ -201,6 +201,32 @@
       </main>
     </div>
   </div>
+
+	<script id="template-article-link" type="text/x-handlebars-template">
+	  <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+	</script>
+
+	<script id="template-tag-link" type="text/x-handlebars-template">
+	  <li><a href="#tag-{{ id }}"><span>{{ tag }}</span></a></li>
+	</script>
+
+	<script id="template-author-link" type="text/x-handlebars-template">
+	  <span>by </span><a href="#author-{{ id }}"><span>{{ name }}</span></a>
+	</script>
+
+	<script id="template-tag-cloud-link" type="text/x-handlebars-template">
+	  {{#each tags}}
+	  <li><a href="#tag-{{ tag }}" class="{{ className }}"<span>{{ tag }}</span></a></li>
+	  {{/each}}
+	</script>
+
+	<script id="template-all-authors-link" type="text/x-handlebars-template">
+	  {{#each authors}}
+	  <li><a href="#author-{{ name }}"><span>{{ name }}</span></a><span> ({{ count }})</span></li>
+	  {{/each}}
+	</script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="js/script.js"></script>
   </body>
 </html>
